Kubernetes/deployment-service-a.yml

apiVersion: v1
kind: Namespace
metadata:
  name: s1-ns

---
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: s1-ns
    labels:
        app: service-a
    name: service-a
spec:
    replicas: 2
    selector:
        matchLabels:
            app: service-a
    template:
        metadata:
            labels:
                app: service-a
        spec:
            containers:
            - image: reem770/service-a
              imagePullPolicy: IfNotPresent
              name: service-a
