Kubernetes/deployment-service-b.yml

apiVersion: v1
kind: Namespace
metadata:
  name: s2-ns

---
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: s2-ns
    labels:
        app: service-b
    name: service-b
spec:
    replicas: 2
    selector:
        matchLabels:
            app: service-b
    template:
        metadata:
            labels:
                app: service-b
        spec:
            containers:
            - image: reem770/service-b
              imagePullPolicy: IfNotPresent
              name: service-b
