Kubernetes/service-b-svc.yml
apiVersion: v1
kind: Service
metadata:
    namespace: s2-ns
    labels:
        app: service-b
    name: service-b-svc
spec:
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
        app: service-b
    type: ClusterIP
