Kubernetes/ingress-b.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    namespace: s2-ns
    name: ingress-b
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    rules:
    - http:
        paths:
        - path: /service-b
          pathType: Prefix
          backend:
            service:
              name: service-b-svc
              port:
                number: 8080
