Kubernetes/deny-from-other-namespaces.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: s1-ns
  name: deny-from-other-namespaces
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
